Fri Oct  7 09:45:31 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ACEXML/docs/TODO.txt:
        * ACEXML/docs/bugs.txt:
        * ASNMP/tests/run_tests.sh:
          Fuzz

Fri Oct  7 09:10:55 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ACEXML/docs/readme.txt:
        * ASNMP/README:
        * Kokyu/README:
        * bin/LabVIEW_RT/README:
        * bin/PerlACE/README:
        * contrib/FaCE/README:
        * examples/C++NPv1/README:
        * examples/C++NPv2/README:
        * examples/IPC_SAP/SSL_SAP/README:
        * examples/Semaphores/README:
        * html/README:
        * netsvcs/lib/README:
        * performance-tests/README:
        * performance-tests/RPC/README:
        * performance-tests/Synch-Benchmarks/Perf_Test/README:
        * performance-tests/Synch-Benchmarks/README:
        * performance-tests/Synch-Benchmarks/Synch_Lib/README:
        * performance-tests/TCP/README:
        * performance-tests/TTCP/C/README:
        * performance-tests/UDP/README:
        * protocols/ace/HTBP/README:
        * websvcs/README:
          Fuzz: No id-tags. Also uniform way of declaring the Id-tags

Fri Oct  7 07:48:32 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ACEXML/examples/SAXPrint/broken.xml:
        * ACEXML/examples/SAXPrint/namespaces.xml:
        * ACEXML/examples/SAXPrint/ns.svc.conf.xml:
        * ACEXML/examples/SAXPrint/simple.svcconf.xml:
        * ACEXML/examples/SAXPrint/svc.conf.xml:
        * Kokyu/tests/DSRT_MIF/svc.conf.xml:
        * examples/ASX/CCM_App/svc.conf.xml:
        * netsvcs/servers/svc.conf.xml:
        * tests/Service_Config_Test.conf.xml:
          Fuzz: No Id-tags.

Thu Oct  6 12:01:30 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * netsvcs/README:
        * netsvcs/clients/Logger/README:
        * netsvcs/clients/README:
        * netsvcs/clients/Tokens/README:
        * netsvcs/clients/Tokens/collection/README:
        * netsvcs/clients/Tokens/deadlock/README: