@@ -1,8 +1,8 @@
+<?xml version="1.0" encoding="iso8859-1"?>
+
 <!--  -->
 <!--  $Id$ -->
 <!--  -->
-
-<?xml version="1.0" encoding="iso8859-1"?>
 
 <rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:sy="http://purl.org/rss/1.0/modules/syndication/" xmlns:admin="http://webns.net/mvcb/" xmlns="http://purl.org/rss/1.0/">
 
