@@ -1,8 +1,8 @@
+<?xml version="1.0"?>
 <!--  -->
 <!--  $Id$ -->
 <!--  -->
 
-<?xml version="1.0"?>
 <ace:ACE_Svc_Conf xmlns="http://ace.doc.wustl.edu/svcconf" xmlns:ace="http://ace.doc.wustl.edu/svcconf">
 <static id="ACE_Service_Manager">
   <params>-d</params>
